Fix for bug 157123 -- fix laggy scrolling on Mac by backing off the timer interval from 10ms to 25ms. Also changed the timer to be a repeating timer, and removed some unused #defines. r=bness/pinkerton, sr=scc, a=scc