layout/xul/base/src/nsSliderFrame.h
@@ -52,9 +52,6 @@ class nsISupportsArray;
 class nsITimer;
 class nsSliderFrame;
 
-#define INITAL_REPEAT_DELAY 500
-#define REPEAT_DELAY        50
-
 nsresult NS_NewSliderFrame(nsIPresShell* aPresShell, nsIFrame** aResult) ;
 
 
